# ddb_ows

./: .clang-format  .git-blame-ignore-revs  .gitignore  Makefile  README.md  meson.build  meson.options
include/: cancellationtoken.hpp  config.hpp  constants.hpp  database.hpp  ddb_ows.hpp  ddb_ows_gui.hpp  job.hpp  jobsqueue.hpp  log.hpp  logger.hpp  playlist_uuid.hpp
include/gui/: converter.hpp  ddb_ows_gui.hpp  execution.hpp  fn_format.hpp  internal.hpp  misc.hpp  playlist.hpp  progressmonitor.hpp  textbufferlogger.hpp
scripts/: view-config
src/: .clang-format-ignore  cancellationtoken.cpp  config.cpp  config.hpp  constants.hpp  database.cpp  database.hpp  dbb_ows_gui.hpp  ddb_ows.cpp  ddb_ows.hpp  ddb_ows.ui  ddb_ows_gui.cpp  ddb_ows_gui.hpp  default_config.S  default_config.json  defs.hpp  gui_resources.xml  job.cpp  job.hpp  jobsqueue.cpp  jobsqueue.hpp  log.hpp  logger.cpp  logger.hpp  meson.build  playlist_uuid.cpp  playlist_uuid.hpp  plugin.cpp  plugin.hpp  progressmonitor.cpp  progressmonitor.hpp  resources.xml  textbufferlogger.cpp  textbufferlogger.hpp
src/gui/: .clang-format-ignore  converter.cpp  cover_art.cpp  ddb_ows.css  ddb_ows.ui  ddb_ows_gui.cpp  execution.cpp  fn_format.cpp  meson.build  misc.cpp  playlist.cpp  progressmonitor.cpp  resources.xml  textbufferlogger.cpp
src/sql/: add_file_to_playlist.sql  clear_playlist.sql  get_unreferenced_files.sql  init.sql  latest_file_sync.sql  new_sync.sql  register_file.sql  register_file_in_playlist.sql  register_playlist.sql  register_synced_file.sql  register_synced_playlist.sql  schema_v1.sql  schema_v2.sql
